--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -13,7 +13,7 @@ html {
 
 html,
 body {
-    background: radial-gradient(1.5em 6.28571em at 1.95em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 0 0, radial-gradient(1.5em 6.28571em at -0.45em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 1.5em 5.5em, radial-gradient(2.3em 4.57143em at 2.99em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.3) 50%, rgba(0, 60, 0, 0.3) 55%, rgba(0, 60, 0, 0) 55%) 0 0, radial-gradient(2.3em 4.57143em at -0.69em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.3) 50%, rgba(0, 60, 0, 0.3) 55%, rgba(0, 60, 0, 0) 55%) 2.3em 4em, radial-gradient(3.5em 6.28571em at 4.55em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 0 0, radial-gradient(3.5em 6.28571em at -1.05em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 3.5em 5.5em, radial-gradient(#203020, #000);
+    background: radial-gradient(1.5em 6.28571em at 1.95em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 0 0, radial-gradient(1.5em 6.28571em at -0.45em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 1.5em 5.5em, radial-gradient(2.3em 4.57143em at 2.99em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.3) 50%, rgba(0, 60, 0, 0.3) 55%, rgba(0, 60, 0, 0) 55%) 0 0, radial-gradient(2.3em 4.57143em at -0.69em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.3) 50%, rgba(0, 60, 0, 0.3) 55%, rgba(0, 60, 0, 0) 55%) 2.3em 4em, radial-gradient(3.5em 6.28571em at 4.55em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 0 0, radial-gradient(3.5em 6.28571em at -1.05em, rgba(0, 60, 0, 0) 50%, rgba(0, 60, 0, 0.25) 50%, rgba(0, 60, 0, 0.25) 55%, rgba(0, 60, 0, 0) 55%) 3.5em 5.5em, radial-gradient(#205020, #000);
     background-color: #141414;
     background-size: 1.5em 11em, 1.5em 11em, 2.3em 8em, 2.3em 8em, 3.5em 11em, 3.5em 11em, 100% 100%;
     background-repeat: repeat;
@@ -29,8 +29,12 @@ main {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0.1px 1em;
-    box-shadow: 0 0 20px 10px #000;
+    box-shadow: 0 0 20px 5px #0008;
     min-height: 100vh;
+}
+
+p {
+    padding: 0 3em;
 }
 
 h1,
@@ -491,4 +495,64 @@ template {
 
 [hidden] {
     display: none;
+}
+
+/* Backlinks */
+
+/* backlinks */
+.backlinks-title {
+    margin-bottom: 0;
+}
+
+.backlinks-container {
+    margin-top: 0;
+}
+
+.backlinks-default {
+    margin-top: 0;
+    margin-left: 16px;
+    color: var(--grey);
+}
+
+.backlink__preview {
+    display: none;
+    
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    background-color: #181818;
+    border-radius: 4px;
+    padding: 4px;
+    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
+    width: 500px;
+    max-height: 148px;
+    overflow: hidden;
+    font-size: 0.8em;
+}
+.backlink__preview::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(transparent, #181818);
+    width: 100%;
+    height: 50px;
+}
+
+.backlink__preview h1 {
+    font-size: 1.2rem;
+    margin-top: 8px;
+    font-weight: bold;
+}
+
+.backlink {
+    width: fit-content;
+    position: relative;
+}
+
+.backlink:hover {
+    padding-right: 4px; /* Allow mouse to travel between link and modal */
+}
+
+.backlink:hover .backlink__preview {
+    display: block;
 }
